# espeasy-manager

./: .gitignore  Dockerfile  README.md  build.py  package-lock.json  package.json  run_dev.sh
.github/workflows/: main.yaml
backend/: main.py  pyproject.toml  requirements.txt  static_file_response.py  udp_receive.py
backend/ESPEasy/: HomeAssistant_MQTT.py  Model.py  __init__.py
backend/esp_easy/: __init__.py  home_assistant_mqtt.py  node_manager.py  udp_receiver.py
backend/src/: config.py  dependencies.py  log_config.py  main.py
backend/src/features/esp_easy/: __init__.py  esp_easy_model.py  esp_easy_service.py  html_parser.py  model.py  node_manager.py
backend/src/features/home_assistant/: __init__.py  home_assistant_model.py  home_assistant_mqtt.py
backend/src/features/nodes/: __init__.py  discovery_messages_factory.py  node_manager.py  node_model.py
backend/src/routers/: config.py  nodes.py
backend/tests/: conftest.py  test_esp_easy_http_parser.py
backend/tests/data/: controllers.html
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
frontend/src/app/nodes/: nodes.service.ts
frontend/src/app/nodes/node-view/: node-view.component.html  node-view.component.ts
frontend/src/app/nodes/nodes-table/: nodes-table.component.html  nodes-table.component.ts
